Fix concurrent list change bug